anotheer section add

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                             </div>
                             <div class="w-[160px] h-[56px] mb-10 bg-[#1DD10026]  rounded-xl ">
-                                <div class="flex pl-4">
+                                <div class="flex pl-2 ">
                                     <img src="./image/seat-green.png" alt="">
                                     <p class="text-xl   text-[#1DD100] items-center pt-4 ">8 seat lefts</p>
                                 </div>
@@ -272,7 +272,7 @@
                         <hr>
                         <br>
                         <br>
-                        <div class="bg-[#F7F8F8] w-[400px] rounded-3xl">
+                        <div class="bg-[#F7F8F8] w-[400px] rounded-3xl mb-14">
                             <br>
                             <div class="flex justify-between rounded-3xl ml-8 mr-8">
                                 <div class="flex ">
@@ -316,8 +316,6 @@
                                 <p class="text-base font-semibold">BDT 1100</p>
                             </div>
                             <br>
-                            
-
                         </div>
                     </div>
                 </div>
@@ -351,7 +349,7 @@
             <p class="text-[#4A4A4A] font-medium">We are working hard to find the best service and deals for you. </p>
             <p class="text-[#4A4A4A] font-medium">Shortly you will find a confirmation in your email.</p>
             <br>
-            <button class="btn bg-[#27AE60] btn-wide">continue</button>
+            <button class="btn bg-[#27AE60] btn-wide text-white">Continue</button>
             <br>
 
         </div>
