--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </nav>
     <main class="font-raleway">
         <section id="ticket-button-section" class="container mx-auto ">
-            <div class="bg-[url(image/banner.png)] bg-no-repeat rounded-3xl ">
+            <div class="bg-[url(image/banner.png)] bg-no-repeat rounded-3xl bg-center ">
                 <div class="text-center ">
                     <div class="pt-20 ">
                         <h1 class="text-6xl font-extrabold pt-10 ">End-to-End Travel with <br><span
