added the last commit

--- a/index.html
+++ b/index.html
@@ -293,8 +293,11 @@
                             <div class="flex justify-between ml-8 mr-8 pt-2">
                                 <p class="text-base font-semibold">Total price</p>
                                 <p class="text-base font-semibold">BDT <span id="total-result">0</span></p>
-                                <p>discountPrice: <span id="discountammout">0</span></p>
+                               
                             </div>
+                          <div>
+                            <p class="text-base font-semibold">DiscountPrice: <span id="discountammout">0</span></p> 
+                          </div>
                             <br>
                             <div class="w-[350px] h-[48px] bg-[#FFFFFF] rounded-xl ml-8 mr-8">
                                 <div class="flex justify-between">
